Criada relacao para jogo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"></activity>
+        <activity android:name=".EstorouPontuacaoActivity"></activity>
     </application>
 
 </manifest>
